--- a/assets/css/index4.css
+++ b/assets/css/index4.css
@@ -1,27 +1,31 @@
-
-
 @import url(./app.css);
 
 .navbar {
     background-color: rgba(50, 52, 82, 1);
-height: 40px;
+    height: 40px;
 }
+
 .search_click {
     background-color: rgba(67, 65, 141, 1);
 }
+
 .nav_input {
     background-color: rgba(50, 52, 82, 1);
     color: aliceblue;
 }
+
 .nav_input::placeholder {
     color: white;
 }
+
 .user_button {
     background-color: rgba(77, 77, 199, 0.53);
 }
-.menu_button{
+
+.menu_button {
     background-color: aliceblue;
 }
+
 .user_icon {
     background-color: rgb(109, 219, 97);
     margin-left: 10px;
@@ -31,45 +35,55 @@ height: 40px;
 }
 
 
-.next_button{
-    background:rgba(50, 52, 82, 1);
+.next_button {
+    background: rgba(50, 52, 82, 1);
     color: white;
     border: none;
     margin-top: 5px;
 }
+
 .nav_home {
     margin-left: 50px;
     margin-top: -38px;
 
 }
+
 .nav_home img {
     width: 30px;
     margin-left: 30px;
     height: 25px;
 }
+
 .data_show {
     margin-top: 20px;
 }
+
 .edit_one_data {
-    margin-left: auto; 
+    margin-left: auto;
     margin-right: 0;
 }
+
 .data_one_content {
     margin-left: 0;
 }
-.edit_one_data img{
-    margin-top:-50px;
+
+.edit_one_data img {
+    margin-top: -50px;
     width: 25px;
-    height: 25px; 
+    height: 25px;
 }
-.edit_one_data_img{
-    
+
+.edit_one_data_img {
+
     margin-left: 80vh;
 }
-    /* Custom CSS for modal width */
+
+/* Custom CSS for modal width */
 .modal-dialog.custom-width {
-    max-width: 50%; /* Adjust width for smaller screens */
-    margin: 10vh auto; /* Center the modal vertically */
+    max-width: 50%;
+    /* Adjust width for smaller screens */
+    margin: 10vh auto;
+    /* Center the modal vertically */
 }
 
 /* Custom styling for list items as buttons */
@@ -78,7 +92,8 @@ height: 40px;
     padding: 0;
     margin: 0;
     list-style-type: none;
-    overflow-x: auto; /* Enable horizontal scroll on small screens */
+    overflow-x: auto;
+    /* Enable horizontal scroll on small screens */
 }
 
 .modal-title li {
@@ -104,7 +119,8 @@ height: 40px;
     margin-top: 50px;
 }
 
-.content_two input, .content_three input {
+.content_two input,
+.content_three input {
     border: none;
     margin: 5px;
 }
@@ -113,15 +129,19 @@ height: 40px;
     margin-left: 20px;
 }
 
-.btn_1, .btn_2 {
-    padding: 2px 15px; /* Adjust padding for consistency */
+.btn_1,
+.btn_2 {
+    padding: 2px 15px;
+    /* Adjust padding for consistency */
 }
 
 .btn_2 {
-    padding: 2px 10px; /* Adjust padding for consistency */
+    padding: 2px 10px;
+    /* Adjust padding for consistency */
 }
-.model_left{
-    
+
+.model_left {
+
     margin-right: 580px;
     color: white;
     border: #000000;
