--- a/assets/css/multistep.css
+++ b/assets/css/multistep.css
@@ -1,4 +1,3 @@
-
 @import url(./app.css);
 
 
@@ -95,22 +94,24 @@
             align-items: center;
             position: relative;
 
-            input[type="radio"],input[type="check"] {
+            input[type="radio"],
+            input[type="check"] {
                 appearance: none;
                 width: 180px;
                 height: 48px;
                 position: absolute;
                 cursor: pointer;
             }
+
             input[type="check"] {
                 width: 200px !important;
             }
 
             input[type="radio"]:checked~span {
                 border: 1px solid var(--yellow);
-                background-color:var(--yellow);
+                background-color: var(--yellow);
                 color: rgb(0, 0, 0);
-                
+
                 box-shadow: 0px 6px 24px 0px var(--yellow) !important;
             }
 
@@ -149,50 +150,55 @@
         }
     }
 }
+
 .form6 {
-        label {
-            cursor: pointer;
+    label {
+        cursor: pointer;
+        width: 180px;
+        height: 48px;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
+        border: 1px solid #E8EAED;
+        align-items: center;
+        border-radius: 8px;
+        box-shadow: 0px 0px 8px 0px #EDF0F299;
+        padding-left: 18px;
+        padding-right: 18px;
+
+        input[type="radio"],
+        input[type="check"] {
+            appearance: none;
             width: 180px;
             height: 48px;
-
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
-            border: 1px solid #E8EAED;
-            align-items: center;
-            border-radius: 8px;
-            box-shadow: 0px 0px 8px 0px #EDF0F299;
-            padding-left: 18px;
-            padding-right: 18px;
-            input[type="radio"],input[type="check"] {
-                appearance: none;
-                width: 180px;
-                height: 48px;
-                position: absolute;
-                cursor: pointer;
-            }
-            input[type="checkbox"] {
-                accent-color:var(--yellow);
-            }
-
-            input[type="radio"]:checked~span {
-                border: 1px solid var(--yellow);
-                background-color:var(--yellow);
-                color: white;
-                box-shadow: 0px 6px 24px 0px var(--yellow) !important;
-            }
-           
-
-            span {
-                font-size: 16px;
-                font-weight: 400;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                line-height: 16px;
-            }
+            position: absolute;
+            cursor: pointer;
         }
 
+        input[type="checkbox"] {
+            accent-color: var(--yellow);
+        }
+
+        input[type="radio"]:checked~span {
+            border: 1px solid var(--yellow);
+            background-color: var(--yellow);
+            color: white;
+            box-shadow: 0px 6px 24px 0px var(--yellow) !important;
+        }
+
+
+        span {
+            font-size: 16px;
+            font-weight: 400;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 16px;
+        }
     }
+
+}
+
 .form5 {
     span {
 
@@ -282,40 +288,45 @@
     cursor: pointer;
 
 }
-.form7{
-    input{
-       width: 274px;
-       height: 48px;
-       border:1px solid #D6D9DE;
+
+.form7 {
+    input {
+        width: 274px;
+        height: 48px;
+        border: 1px solid #D6D9DE;
         font-size: 16px;
         font-weight: 400;
         line-height: 21.28px;
         text-align: left;
     }
-    .form-control:focus{
+
+    .form-control:focus {
         box-shadow: none !important;
         border: 1px solid var(--yellow) !important;
-        
+
     }
-    .fieldset-heading{
-        margin-bottom:60px !important;
+
+    .fieldset-heading {
+        margin-bottom: 60px !important;
     }
-    p{
+
+    p {
         margin: 0 auto;
         margin-top: 90px;
         font-size: 14px;
         font-weight: 400;
         line-height: 21px;
         text-align: center;
-        color:#ADB3BD;
+        color: #ADB3BD;
         width: 288.73px;
     }
 }
-#backButton{
-    width:99px;
+
+#backButton {
+    width: 99px;
     height: 48px;
     border-radius: 10px;
-    border:1px solid #D6D9DE;
+    border: 1px solid #D6D9DE;
     box-shadow: 0px 4px 8px 0px #EDF0F299;
     font-size: 16px;
     font-weight: 400;
@@ -323,60 +334,70 @@
     text-align: center;
     margin: 0;
 }
-#nextButton{
+
+#nextButton {
     width: 91px;
     height: 48px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px 0px #EDF0F299;
     background-color: var(--black);
-    color:white;
+    color: white;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
     text-align: center;
     margin: 0;
 }
-.modal-footer{
+
+.modal-footer {
     height: 80px;
-    padding:0 21px;
+    padding: 0 21px;
 }
-.modal-content-2{
+
+.modal-content-2 {
     width: auto !important;
     overflow: hidden !important;
-    .image-block{
-        position:relative;
+
+    .image-block {
+        position: relative;
         overflow: hidden !important;
-        .overlay{
+
+        .overlay {
             background: #00000073;
             height: 100%;
             width: 100%;
             position: absolute;
             top: 0;
         }
-        .play-button{
+
+        .play-button {
             position: absolute;
-            top:50%;
-            left:50%;
+            top: 50%;
+            left: 50%;
             transform: translate(-50%, -50%);
             z-index: 2;
         }
     }
-    img{
+
+    img {
 
         margin-top: -10px !important;
     }
-    .content{
-        margin:48px;
+
+    .content {
+        margin: 48px;
         display: flex;
         justify-content: center;
-        h1{
+
+        h1 {
             font-size: 24px;
             font-weight: 600;
             line-height: 28px;
             text-align: center;
             margin-bottom: 12px;
         }
-        p{
+
+        p {
             font-size: 16px;
             font-weight: 400;
             line-height: 22px;
@@ -385,7 +406,8 @@
             margin: 0 auto;
             margin-bottom: 32px;
         }
-        a{
+
+        a {
             width: 160px;
             height: 32px;
             border-radius: 6px;
@@ -399,37 +421,46 @@
         }
     }
 }
-body{
+
+body {
     overflow-x: hidden;
 }
-@media only screen and (min-width:768px) and (max-width:991px){
-    #multiStepModal{
-        .modal-dialog{
+
+@media only screen and (min-width:768px) and (max-width:991px) {
+    #multiStepModal {
+        .modal-dialog {
             max-width: 800px;
-            .modal-content{
+
+            .modal-content {
                 width: 700px;
             }
         }
     }
 }
-@media only screen and (max-width:767px){
-    #multiStepModal{
-        .modal-dialog{
+
+@media only screen and (max-width:767px) {
+    #multiStepModal {
+        .modal-dialog {
             max-width: 100% !important;
             width: 100%;
             justify-content: center;
             margin-left: 0 !important;
-            .modal-content{
+
+            .modal-content {
                 max-width: 330px;
-                .modal-header{
+
+                .modal-header {
                     padding: 8px;
-                    .user-name{
+
+                    .user-name {
                         font-size: 14px;
                     }
                 }
-                .modal-body{
+
+                .modal-body {
                     height: auto;
-                    h1{
+
+                    h1 {
                         width: auto !important;
                         font-weight: 900;
                         font-size: 22px;
@@ -438,15 +469,18 @@ body{
                         margin-bottom: 18px;
                     }
                 }
-                .gradient-border{
+
+                .gradient-border {
                     margin-top: 10px;
                 }
             }
-            .modal-content-2{
-                img{
+
+            .modal-content-2 {
+                img {
                     width: 100%;
                 }
-                .play-button{
+
+                .play-button {
                     width: 43px !important;
                 }
             }
