--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -91,10 +91,13 @@
   /* modal buget */
   --bg_templates_buget_modal: #F7F8F9;
   --text_templates_buget_modal: #808080;
-  =======--primary-color: #5F55EE;
+  
+  
+  
+  --primary-color: #5F55EE;
   --secondary-color: white;
   --thirdary-color: #f7f8f9;
   --primary-text-color: #2A2E34;
   --secondary-text-color: #656f7d;
-  >>>>>>>a56c07520deefb94f7cbaa6ae702dc477b282a43
+
 }
