--- a/css/stylecopy.css
+++ b/css/stylecopy.css
@@ -262,9 +262,10 @@
   .login-box {
     box-shadow: 0px 24px 64px 0px #26214a1a;
     background: var(--bg-secondary-color);
+    overflow: hidden;
     width: 500px;
     height: 530px;
-    padding: 30px 60px 0px 60px;
+    /* padding: 30px 60px 0px 60px; */
     border-radius: 12px;
     h5 {
       font-family: Segoe UI;
@@ -316,6 +317,173 @@
       input::placeholder {
         color: var(--secondary-text-color);
       }
+      .show-password-text {
+        font-family: Segoe UI;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 12px;
+        text-align: left;
+        color: var(--secondary-text-color);
+        border-radius: 9px;
+        background-color: transparent;
+      }
+    }
+    input:focus {
+      box-shadow: unset !important;
+      border-color: inherit !important;
+    }
+    .btn {
+      width: 100%;
+      height: 50px;
+      font-family: Segoe UI;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 16px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .login_content{
+      padding: 30px 60px 0px 60px;
+    }
+    .form_footer{
+      font-size: 12px;
+      color: var(--secondary-text-color);
+      background:var( --bg-thirdary-color);
+    height: 40px;
+    p{
+      padding: 5px;
+      color: var(--secondary-text-color);
+      a{
+        color: var(--secondary-text-color);
+      }
+    }
+    }
+  }
+
+  .footer-images{
+    margin-bottom: 0;
+    margin-top: 20px;
+    color: var(--thirdary-text-color);
+    img{
+      margin:10px
+    }
+    
+    a {
+      text-decoration-color: var(--border-secondary-color);
+      color: var(--thirdary-text-color);
+      text-underline-offset: 6px;
+    }
+    
+    .footer-end p{
+      font-size: 12px;
+      margin-top: 15px;
+    }
+  }
+  footer {
+    p {
+      color: var(--thirdary-text-color);
+    }
+    a {
+      text-decoration-color: var(--border-secondary-color);
+      color: var(--thirdary-text-color);
+      text-underline-offset: 6px;
+    }
+  }
+}
+
+.forget-password-page{
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: var(--bg-primary-color);
+  }
+  .background-image {
+    height: 70vh;
+    width: 100%;
+    bottom: 0;
+    z-index: -1;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 140%;
+      height: 100%;
+      background: linear-gradient(
+        90deg,
+        #ffcc00 1.31%,
+        #f7ce46 49.65%,
+        #fdf4d3 93.66%
+      );
+      z-index: -1;
+    }
+  }
+  .header {
+    margin: 10px 32px 0 32px;
+    p {
+      font-family: Segoe UI;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 16px;
+      color: var(--primary-text-color);
+      margin-right: 20px;
+    }
+    a {
+      font-family: Segoe UI;
+      font-size: 16px;
+      font-weight: 700;
+      letter-spacing: 0.4000000059604645px;
+      height: 40px;
+      width: 93px;
+      border-radius: 9px;
+    }
+  }
+  .login-box {
+    box-shadow: 0px 24px 64px 0px #26214a1a;
+    background: var(--bg-secondary-color);
+    width: 500px;
+    height: 470px;
+    padding: 30px 60px 30px 60px;
+    border-radius: 12px;
+    h5 {
+      font-family: Segoe UI;
+      font-size: 34px;
+      font-weight: 700;
+      line-height: 46px;
+      text-align: center;
+      color: var(--primary-text-color);
+      margin-bottom: 10px;
+    }
+   
+ 
+    label {
+      font-family: Segoe UI;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 11px;
+      text-align: left;
+      margin-bottom: 8px;
+      color: var(--primary-text-color);
+    }
+    .input-group {
+      border-radius: 9px;
+      border: 1px solid var(--border-primary-color);
+      height: 45px;
+      input {
+        border-radius: 9px;
+        color: var(--primary-text-color);
+      }
+      input::placeholder {
+        color: var(--secondary-text-color);
+      }
       .forget-password-text {
         font-family: Segoe UI;
         font-size: 12px;
@@ -341,10 +509,16 @@
       text-align: center;
       margin-bottom: 20px;
     }
-    .form_footer{
+    .sso-text {
+      font-family: Segoe UI;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 12px;
+      text-align: center;
+      margin: 0 auto;
+      color: var(--secondary-text-color);
     }
   }
-
   .dont-have-account {
     margin-bottom: 0;
     margin-top: 35px;
@@ -366,7 +540,10 @@
     }
   }
 }
-@media only screen and (max-width: 650px) {
+
+
+
+@media only screen and (max-width: 750px) {
   .login-page {
     .header {
       margin: 10px 16px 0 16px;
@@ -427,4 +604,80 @@
       }
     }
   }
-}
+
+  .signup-page{
+ 
+      .header {
+        margin: 10px 16px 0 16px;
+        p {
+          display: none;
+        }
+      }
+      .login-box {
+        width: auto;
+        min-width: 335px;
+        max-width: calc(100vw - 30px);
+        height: 465px;
+        .form_footer{
+          height: 45px;
+          p{
+          padding: 0;
+        }
+        }
+        .login_content{
+          padding: 8px 21px;
+        }
+        h5 {
+          font-size: 24px;
+          line-height: 34px;
+          margin-bottom: 10px;
+        }
+        .login-with-google {
+          span {
+            font-size: 14px;
+          }
+        }
+        .or-box {
+          font-size: 14px;
+          margin-bottom: 10px;
+          .line {
+            width: calc((100vw - 30px - 10px) / 2);
+          }
+        }
+        label {
+          font-size: 14px;
+        }
+        .btn {
+          height: 40px;
+        }
+      }
+      .dont-have-account {
+        margin-bottom: 0;
+        margin-top: 20px;
+        color: var(--thirdary-text-color);
+        a {
+          text-decoration-color: var(--border-secondary-color);
+          color: var(--thirdary-text-color);
+          text-underline-offset: 6px;
+        }
+      }
+      footer {
+        p {
+          font-size: 12px;
+          margin: 0 2px;
+          color: var(--thirdary-text-color);
+        }
+        a {
+          text-decoration-color: var(--border-secondary-color);
+          color: var(--thirdary-text-color);
+          text-underline-offset: 6px;
+        }
+      }
+      .footer-images{
+        img{
+          margin: 0;
+        }
+      }
+    }
+  }
+
