--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
   --thirdary-text-color: white;
 
   --button-text-color: white;
+  --button-secondary-text-color: #808080;
 
   --border-primary-color: #cdd4e0;
   --border-secondary-color: rgba(255, 255, 255, 0.4);
@@ -19,6 +20,17 @@
 .btn {
   background-color: var(--primary-color);
   color: var(--button-text-color);
+  &::hover {
+    background-color: var(--primary-color) !important;
+    color: var(--button-text-color) !important;
+  }
+  &.disabled {
+    opacity: 0.8;
+  }
+}
+
+.display-none {
+  display: none;
 }
 .login-page {
   height: 100vh;
@@ -208,9 +220,6 @@
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   position: relative;
   &::before {
     content: "";
@@ -219,6 +228,10 @@
     height: 100%;
     z-index: -1;
     background: var(--bg-primary-color);
+  }
+  main{
+    height:calc(100vh - 75px);
+    align-items:center;
   }
   .background-image {
     height: 70vh;
@@ -262,9 +275,10 @@
   .login-box {
     box-shadow: 0px 24px 64px 0px #26214a1a;
     background: var(--bg-secondary-color);
+    overflow: hidden;
     width: 500px;
-    height: 530px;
-    padding: 30px 60px 0px 60px;
+    height: 535px;
+    /* padding: 30px 60px 0px 60px; */
     border-radius: 12px;
     h5 {
       font-family: Segoe UI;
@@ -316,7 +330,7 @@
       input::placeholder {
         color: var(--secondary-text-color);
       }
-      .forget-password-text {
+      .show-password-text {
         font-family: Segoe UI;
         font-size: 12px;
         font-weight: 400;
@@ -341,19 +355,45 @@
       text-align: center;
       margin-bottom: 20px;
     }
-    .form_footer{
+    .login_content {
+      padding: 30px 60px 0px 60px;
+    }
+    .form_footer {
+      font-size: 12px;
+      color: var(--secondary-text-color);
+      background: var(--bg-thirdary-color);
+      height: 40px;
+      p {
+        padding: 5px;
+        font-size: 13px;
+        color: var(--secondary-text-color);
+        a {
+          color: var(--secondary-text-color);
+        }
+      }
     }
   }
 
-  .dont-have-account {
+  .footer-images {
     margin-bottom: 0;
-    margin-top: 35px;
-    color: var(--thirdary-text-color);
+    justify-content:center;
+    display:flex;
+    margin-block:30px;
+    gap:10px;
+    
+
     a {
       text-decoration-color: var(--border-secondary-color);
       color: var(--thirdary-text-color);
       text-underline-offset: 6px;
     }
+
+  }
+  .footer-end p {
+    font-size: 12px;
+    margin-top: 15px;
+    color: var(--thirdary-text-color);
+
   }
   footer {
     p {
@@ -366,7 +406,362 @@
     }
   }
 }
-@media only screen and (max-width: 650px) {
+
+/* multistep */
+
+#multiStepModal {
+  font-family: Segoe UI !important;
+  .user-name {
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 600;
+    margin-bottom: 0;
+    color: var(--primary-text-color);
+  }
+  .modal-dialog {
+    max-width: 920px;
+
+    .modal-header {
+      padding: 24px;
+    }
+
+    .modal-content {
+      width: 920px;
+      border-radius: 20px;
+    }
+
+    .modal-body {
+      height: 479px;
+    }
+  }
+
+  .fieldset-heading {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 50px;
+    text-align: center;
+    width: 520px;
+    margin-bottom: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 100px;
+    color: var(--primary-text-color);
+  }
+
+  .gradient-border {
+    height: 4px;
+    width: 100;
+    margin: 0 24px;
+    background: linear-gradient(90deg, #fecd0c 0%, #f8cf49 50%, #fbe18c 100%);
+  }
+  .form1,
+  .form2,
+  .form3,
+  .form4,
+  .form5,
+  .form {
+    label {
+      cursor: pointer;
+      width: 180px;
+      height: 48px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+
+      input[type="radio"],
+      input[type="check"] {
+        appearance: none;
+        width: 180px;
+        height: 48px;
+        position: absolute;
+        cursor: pointer;
+      }
+
+      input[type="check"] {
+        width: 200px !important;
+      }
+
+      input[type="radio"]:checked ~ span {
+        border: 1px solid var(--primary-color);
+        background-color: var(--primary-color);
+        color: var(--thirdary-text-color);
+      }
+
+      span {
+        width: 100%;
+        height: 100%;
+        line-height: 48px !important;
+        border: 1px solid #e8eaed;
+        box-shadow: 0px 0px 8px 0px #edf0f299;
+        border-radius: 8px;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 400;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        line-height: 16px;
+      }
+    }
+  }
+  .form3,
+  .form4,
+  .form5 {
+    label {
+      width: auto !important;
+
+      input {
+        width: auto !important;
+      }
+
+      span {
+        padding: 0 20px;
+      }
+    }
+  }
+
+  .form6 {
+    label {
+      cursor: pointer;
+      width: 180px;
+      height: 48px;
+
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: relative;
+      border: 1px solid #e8eaed;
+      align-items: center;
+      border-radius: 8px;
+      box-shadow: 0px 0px 8px 0px #edf0f299;
+      padding-left: 18px;
+      padding-right: 18px;
+
+      input[type="radio"],
+      input[type="check"] {
+        appearance: none;
+        width: 180px;
+        height: 48px;
+        position: absolute;
+        cursor: pointer;
+      }
+
+      input[type="checkbox"] {
+        accent-color: var(--primary-color);
+        color: var(--thirdary-text-color);
+      }
+
+      input[type="radio"]:checked ~ span {
+        border: 1px solid var(--yellow);
+        background-color: var(--yellow);
+        color: white;
+        box-shadow: 0px 6px 24px 0px var(--yellow) !important;
+      }
+
+      span {
+        font-size: 16px;
+        font-weight: 400;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        line-height: 16px;
+      }
+    }
+  }
+
+  .form5 {
+    span {
+      padding: 0 30px !important;
+    }
+  }
+
+  .fieldset-heading2 {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 50px;
+    text-align: center;
+    width: 513px;
+    margin-bottom: 120px;
+    width: 329.83px;
+    margin-left: 270px;
+    color: var(--primary-text-color);
+  }
+
+  .back {
+    position: absolute;
+    left: 24px;
+    margin-top: 2px;
+    gap: 8px;
+    bottom: 15px;
+  }
+  .button_desgin1,
+  .button_desgin2,
+  .button_desgin6 {
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  .button_desgin3,
+  .button_desgin4,
+  .button_desgin5 {
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+
+    width: 61%;
+    margin: 0 auto;
+  }
+
+  .button_desgin4,
+  .button_desgin5 {
+    width: 93% !important;
+  }
+
+  .box {
+    display: flex;
+    width: 20%;
+
+    justify-content: center;
+    align-items: center;
+    border: 1px solid;
+    border-radius: 8px;
+    box-shadow: 0px 0px 8px 0px rgba(237, 240, 242, 0.6);
+    cursor: pointer;
+  }
+
+  .form7 {
+    input {
+      width: 274px;
+      height: 48px;
+      border: 1px solid #d6d9de;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 21.28px;
+      text-align: left;
+    }
+
+    .form-control:focus {
+      box-shadow: none !important;
+      border: 1px solid var(-border-primary-color) !important;
+    }
+
+    .fieldset-heading {
+      margin-bottom: 60px !important;
+    }
+
+    p {
+      margin: 0 auto;
+      margin-top: 90px;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 21px;
+      text-align: center;
+      color: #adb3bd;
+      width: 288.73px;
+    }
+  }
+
+  #backButton {
+    width: 99px;
+    height: 48px;
+    border-radius: 10px;
+    border: 1px solid var(--border-secondary-color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+    margin: 0;
+  }
+
+  #nextButton {
+    width: 91px;
+    height: 48px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+    margin: 0;
+  }
+
+  .modal-footer {
+    height: 80px;
+    padding: 0 21px;
+  }
+
+  .modal-content-2 {
+    width: auto !important;
+    overflow: hidden !important;
+
+    .image-block {
+      position: relative;
+      overflow: hidden !important;
+
+      .overlay {
+        background: #00000073;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+      }
+
+      .play-button {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+      }
+    }
+
+    img {
+      margin-top: -10px !important;
+    }
+
+    .content {
+      margin: 48px;
+      display: flex;
+      justify-content: center;
+
+      h1 {
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 28px;
+        text-align: center;
+        margin-bottom: 12px;
+        color: var(--primary-text-color);
+      }
+
+      p {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22px;
+        text-align: center;
+        width: 313px;
+        margin: 0 auto;
+        margin-bottom: 32px;
+        color: var(--primary-text-color);
+      }
+
+      a {
+        width: 160px;
+        height: 32px;
+        border-radius: 6px;
+        border: 1px solid #e8eaed;
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 32px;
+        text-align: center;
+        color: var(--secondary-text-color);
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
   .login-page {
     .header {
       margin: 10px 16px 0 16px;
@@ -424,6 +819,80 @@
         text-decoration-color: var(--border-secondary-color);
         color: var(--thirdary-text-color);
         text-underline-offset: 6px;
+      }
+    }
+  }
+  .signup-page {
+    .header {
+      margin: 10px 16px 0 16px;
+      p {
+        display: none;
+      }
+    }
+    .login-box {
+      width: auto;
+      min-width: 335px;
+      max-width: calc(100vw - 30px);
+      height: 465px;
+      .form_footer {
+        height: 45px;
+        p {
+          padding: 5px 15px;
+          font-size: 13px;
+        }
+      }
+      .login_content {
+        padding: 8px 21px;
+      }
+      h5 {
+        font-size: 24px;
+        line-height: 34px;
+        margin-bottom: 10px;
+      }
+      .login-with-google {
+        span {
+          font-size: 14px;
+        }
+      }
+      .or-box {
+        font-size: 14px;
+        margin-bottom: 10px;
+        .line {
+          width: calc((100vw - 30px - 10px) / 2);
+        }
+      }
+      label {
+        font-size: 14px;
+      }
+      .btn {
+        height: 40px;
+      }
+    }
+    .dont-have-account {
+      margin-bottom: 0;
+      margin-top: 20px;
+      color: var(--thirdary-text-color);
+      a {
+        text-decoration-color: var(--border-secondary-color);
+        color: var(--thirdary-text-color);
+        text-underline-offset: 6px;
+      }
+    }
+    footer {
+      p {
+        font-size: 12px;
+        margin: 0 2px;
+        color: var(--thirdary-text-color);
+      }
+      a {
+        text-decoration-color: var(--border-secondary-color);
+        color: var(--thirdary-text-color);
+        text-underline-offset: 6px;
+      }
+    }
+    .footer-images {
+      img {
+        margin: 0;
       }
     }
   }
