--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -82,7 +82,7 @@
   --text_color_hover_modal: #808080;
   /* alerts color */
   --background_colour_alert_modal: #F2F1FE;
-  --text_colour_alert_modal: black;
+  --text_colour_alert_modal: #black;
   /* templates Card */
   --background_templates_card_modal: #F7F8F9;
   /* templates Card */
