--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color:#ffcc00;
+  --primary-color: #ffcc00;
   --secondary-color: #f4f5f8;
   --thirdary-color: #f7f8f9;
 
@@ -10,16 +10,13 @@
   --primary-text-color: #000000;
   --secondary-text-color: #808080;
   --thirdary-text-color: white;
-  --fourdary-text-color:#ffcc00;
+  --fourdary-text-color: #ffcc00;
   --button-text-color: white;
   --button-secondary-text-color: #808080;
 
-
-
-  --bg-primary-nav-color:#ffcc00;
-  --bg-secondary-nav-color:#FFFBED;
-  --bg-thirdary-nav-color:#FFCC00;
-  
+  --bg-primary-nav-color: #ffcc00;
+  --bg-secondary-nav-color: #fffbed;
+  --bg-thirdary-nav-color: #ffcc00;
 
   --border-primary-color: #cdd4e0;
   --border-secondary-color: rgba(255, 255, 255, 0.4);
@@ -227,6 +224,9 @@
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: relative;
   &::before {
     content: "";
@@ -235,10 +235,6 @@
     height: 100%;
     z-index: -1;
     background: var(--bg-primary-color);
-  }
-  main{
-    height:calc(100vh - 75px);
-    align-items:center;
   }
   .background-image {
     height: 70vh;
@@ -362,30 +358,43 @@
       text-align: center;
       margin-bottom: 20px;
     }
+    .login_content{
+      padding: 30px 60px 0px 60px;
+    }
     .form_footer{
+      font-size: 12px;
+      color: var(--secondary-text-color);
+      background:var( --bg-thirdary-color);
+    height: 40px;
+    p{
+      padding: 5px;
+      font-size: 13px;
+      color: var(--secondary-text-color);
+      a{
+        color: var(--secondary-text-color);
+      }
+    }
     }
   }
 
-  .dont-have-account {
+  .footer-images{
     margin-bottom: 0;
-    justify-content:center;
-    display:flex;
-    margin-block:30px;
-    gap:10px;
+    margin-top: 20px;
+    color: var(--thirdary-text-color);
+    img{
+      margin:10px
+    }
     
-
     a {
       text-decoration-color: var(--border-secondary-color);
       color: var(--thirdary-text-color);
       text-underline-offset: 6px;
     }
-
-  }
-  .footer-end p {
-    font-size: 12px;
-    margin-top: 15px;
-    color: var(--thirdary-text-color);
-
+    
+    .footer-end p{
+      font-size: 12px;
+      margin-top: 15px;
+    }
   }
   footer {
     p {
@@ -398,7 +407,191 @@
     }
   }
 }
-@media only screen and (max-width: 650px) {
+
+.forget-password-page {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: var(--bg-primary-color);
+  }
+  main {
+    height: calc(100vh - 75px);
+    align-items: center;
+  }
+  .background-image {
+    height: 70vh;
+    width: 100%;
+    bottom: 0;
+    z-index: -1;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 140%;
+      height: 100%;
+      background: linear-gradient(
+        90deg,
+        #ffcc00 1.31%,
+        #f7ce46 49.65%,
+        #fdf4d3 93.66%
+      );
+      z-index: -1;
+    }
+  }
+  .header {
+    margin: 10px 32px 0 32px;
+    p {
+      font-family: Segoe UI;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 16px;
+      color: var(--primary-text-color);
+      margin-right: 20px;
+    }
+    a {
+      font-family: Segoe UI;
+      font-size: 16px;
+      font-weight: 700;
+      letter-spacing: 0.4000000059604645px;
+      height: 40px;
+      width: 93px;
+      border-radius: 9px;
+    }
+  }
+  .login-box {
+    box-shadow: 0px 24px 64px 0px #26214a1a;
+    background: var(--bg-secondary-color);
+    width: 500px;
+    height: 640px;
+    padding: 30px 60px 30px 60px;
+    border-radius: 12px;
+    h5 {
+      font-family: Segoe UI;
+      font-size: 34px;
+      font-weight: 700;
+      line-height: 46px;
+      text-align: center;
+      color: var(--primary-text-color);
+      margin-bottom: 10px;
+    }
+    .form-para {
+      font-size: 16;
+      color: var(--secondary-text-color);
+    }
+
+    label {
+      font-family: Segoe UI;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 11px;
+      text-align: left;
+      margin-bottom: 8px;
+      color: var(--primary-text-color);
+    }
+    .input-group {
+      border-radius: 9px;
+      border: 1px solid var(--border-primary-color);
+      height: 45px;
+      input {
+        border-radius: 9px;
+        color: var(--primary-text-color);
+      }
+      input::placeholder {
+        color: var(--secondary-text-color);
+      }
+      .forget-password-text {
+        font-family: Segoe UI;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 12px;
+        text-align: left;
+        color: var(--secondary-text-color);
+        border-radius: 9px;
+        background-color: transparent;
+      }
+    }
+    input:focus {
+      box-shadow: unset !important;
+      border-color: inherit !important;
+    }
+
+    .btn {
+      width: 100%;
+      height: 50px;
+      font-family: Segoe UI;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 16px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .input-content {
+      h2 {
+        font-size: 12px;
+      }
+      .input-field {
+        gap: 20px;
+        .custom-input {
+          border: none;
+          border-bottom: 2px solid var(--secondary-text-color);
+          color: var(--secondary-text-color);
+          padding: 0.375rem 0.75rem;
+          margin-bottom: 1rem;
+          width: 80px;
+          margin-top: 60px;
+          font-size: 30px;
+          outline: none; /* Remove default focus outline */
+        }
+
+        .custom-input:focus {
+          box-shadow: none;
+
+          outline: none;
+        }
+      }
+    }
+    .sso-text {
+      font-family: Segoe UI;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 12px;
+      text-align: center;
+      margin: 0 auto;
+      color: var(--secondary-text-color);
+      a,
+      span {
+        color: var(--fourdary-text-color);
+      }
+    }
+  }
+  .dont-have-account {
+    margin-bottom: 0;
+    margin-top: 35px;
+    color: var(--thirdary-text-color);
+    a {
+      text-decoration-color: var(--border-secondary-color);
+      color: var(--thirdary-text-color);
+      text-underline-offset: 6px;
+    }
+  }
+  footer {
+    p {
+      color: var(--thirdary-text-color);
+    }
+    a {
+      text-decoration-color: var(--border-secondary-color);
+      color: var(--thirdary-text-color);
+      text-underline-offset: 6px;
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
   .login-page {
     .header {
       margin: 10px 16px 0 16px;
@@ -457,6 +650,161 @@
         color: var(--thirdary-text-color);
         text-underline-offset: 6px;
       }
+    }
+  }
+  .signup-page {
+    .header {
+      margin: 10px 16px 0 16px;
+      p {
+        display: none;
+      }
+    }
+    .login-box {
+      width: auto;
+      min-width: 335px;
+      max-width: calc(100vw - 30px);
+      height: 465px;
+      .form_footer {
+        height: 45px;
+        p {
+          padding: 5px 15px;
+          font-size: 13px;
+        }
+      }
+      .login_content {
+        padding: 8px 21px;
+      }
+      h5 {
+        font-size: 24px;
+        line-height: 34px;
+        margin-bottom: 10px;
+      }
+      .login-with-google {
+        span {
+          font-size: 14px;
+        }
+      }
+      .or-box {
+        font-size: 14px;
+        margin-bottom: 10px;
+        .line {
+          width: calc((100vw - 30px - 10px) / 2);
+        }
+      }
+      label {
+        font-size: 14px;
+      }
+      .btn {
+        height: 40px;
+      }
+    }
+    .dont-have-account {
+      margin-bottom: 0;
+      margin-top: 20px;
+      color: var(--thirdary-text-color);
+      a {
+        text-decoration-color: var(--border-secondary-color);
+        color: var(--thirdary-text-color);
+        text-underline-offset: 6px;
+      }
+    }
+    footer {
+      p {
+        font-size: 12px;
+        margin: 0 2px;
+        color: var(--thirdary-text-color);
+      }
+      a {
+        text-decoration-color: var(--border-secondary-color);
+        color: var(--thirdary-text-color);
+        text-underline-offset: 6px;
+      }
+    }
+    .footer-images {
+      img {
+        margin: 0;
+      }
+    }
+  }
+
+  .forget-password-page {
+    .header {
+      margin: 10px 16px 0 16px;
+      p {
+        display: none;
+      }
+    }
+    .login-box {
+      width: auto;
+      min-width: 335px;
+      max-width: calc(100vw - 30px);
+      height: 525px !important;
+      padding: 10px 15px 10px 15px;
+      .input-content {
+        & .input-field {
+          .custom-input {
+            margin-top: 20px;
+            font-size: 20px;
+            width: 50px;
+          }
+        }
+      }
+      img {
+        margin: 0;
+      }
+
+      h5 {
+        font-size: 24px;
+        line-height: 34px;
+        margin-bottom: 10px;
+      }
+      .login-with-google {
+        span {
+          font-size: 14px;
+        }
+      }
+      .or-box {
+        font-size: 14px;
+        margin-bottom: 10px;
+        .line {
+          width: calc((100vw - 30px - 10px) / 2);
+        }
+      }
+      label {
+        font-size: 14px;
+      }
+      .btn {
+        height: 40px;
+      }
+    }
+    .dont-have-account {
+      margin-bottom: 0;
+      margin-top: 20px;
+      color: var(--thirdary-text-color);
+      a {
+        text-decoration-color: var(--border-secondary-color);
+        color: var(--thirdary-text-color);
+        text-underline-offset: 6px;
+      }
+    }
+    footer {
+      p {
+        font-size: 12px;
+        margin: 0 2px;
+        color: var(--thirdary-text-color);
+      }
+      a {
+        text-decoration-color: var(--border-secondary-color);
+        color: var(--thirdary-text-color);
+        text-underline-offset: 6px;
+      }
+    }
+  }
+
+  .home-page {
+    .Personal_list_content button {
+      width: 140px;
+      border-radius: 5px;
     }
   }
 }
